--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,11 +1,35 @@
-.inputbar{
-  width:452rpx;
-  height:68rpx;
-  background-color: red;
+.page {
+	display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  flex-direction: column;
+}
+.inputbar {
+  margin-top: 680rpx;
+	display: flex;
+	width: 452rpx;
+  height: 68rpx;
+	background: rgba(0, 0, 0, 0.6);
+	color: white;
+	/* 垂直居中 */
+	align-items: center;
+	/* 水平居中 */
+	justify-content: center;
+	border-radius: 40rpx;
+	font-size: 40rpx;
 }
 
-.btn{
-  width:150rpx;
-  height:46rpx;
-  background-color:green;
+.btn {
+  display: flex;
+  margin-top: 86rpx;
+	width: 150rpx;
+	height: 46rpx;
+	background: rgba(0, 0, 0, 0.6);
+	color: white;
+	/* 垂直居中 */
+	align-items: center;
+	/* 水平居中 */
+	justify-content: center;
+	border-radius: 40rpx;
+	font-size: 28rpx;
 }
