--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,34 +2,39 @@
 	display: flex;
   align-items: center;
   /* justify-content: center; */
+  /* 竖轴 */
   flex-direction: column;
 }
 .inputbar {
   margin-top: 680rpx;
-	display: flex;
 	width: 452rpx;
   height: 68rpx;
 	background: rgba(0, 0, 0, 0.6);
-	color: white;
+  color: white;
+  /* 圆角 */
+	border-radius: 40rpx;
+	font-size: 40rpx;
+  
+  /* 布局 */
+	display: flex;
 	/* 垂直居中 */
 	align-items: center;
 	/* 水平居中 */
 	justify-content: center;
-	border-radius: 40rpx;
-	font-size: 40rpx;
 }
-
 .btn {
+  /* 布局 */
   display: flex;
+  /* 垂直居中 */
+  align-items: center;
+  /* 水平居中 */
+  justify-content: center;
+
   margin-top: 86rpx;
 	width: 150rpx;
 	height: 46rpx;
 	background: rgba(0, 0, 0, 0.6);
 	color: white;
-	/* 垂直居中 */
-	align-items: center;
-	/* 水平居中 */
-	justify-content: center;
 	border-radius: 40rpx;
 	font-size: 28rpx;
 }
